@@ -1,3 +1,3 @@
 FHEM Tablet UI last changes:
- 2018-10-07
- - clock: get time from FHEM, added data-offset
+ 2018-10-08
+ - clock: added class check 'localonly'
