@@ -1,5 +1,8 @@
 FHEM Tablet UI change history:
 
+ 2018-10-08
+ - clock: added class check 'localonly'
+ 
  2018-10-07
  - clock: get time from FHEM, added data-offset
  
